--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -1,4 +1,6 @@
 ---
 
+work_dir: /home/ansible/work
+
 semaphores_dir: /home/ansible/semaphores
 semaphores_header: "## This semaphore is managed by Ansible - do not edit! ##"
