--- a/roles/www/tasks/apache.yml
+++ b/roles/www/tasks/apache.yml
@@ -1,5 +1,5 @@
 ---
 - name: ensure apache is at the latest version
-  apt: update_cache=yes pkg=apache2 state=latest
+  apt: update_cache=yes pkg=apache2 state=latest cache_valid_time=86400
 - name: make sure apache is running
   service: name=apache2 state=running
