--- a/roles/www/tasks/leptonica.yml
+++ b/roles/www/tasks/leptonica.yml
@@ -2,20 +2,18 @@
 ## Leptonica
 ## configure vars in ../vars/main.yml
 
-- name: ensure working directory exists
-  file: path="{{work_dir}}" state=directory recurse=yes
-
 - name: create leptonica build dir
   file: path={{lept_dir}} state=directory
 
-- stat: path={{lept_dir}}
+- stat: path="{{work_dir}}/{{lept_tar}}"
+  register: lept_download
 
 - name: fetch leptonica
   get_url: url="{{lept_url}}" dest="{{work_dir}}" force=no sha256sum="{{lept_sha}}"
+  when: lept_download.stat.exists == False
 
 - name: un-tar leptonica
   unarchive: copy=no src="{{work_dir}}/{{lept_tar}}" dest="{{work_dir}}"
-#  when: check_lept_dir.stat.exists == False
 
 - name: configure leptonica
   shell: ./configure
