--- a/roles/www/tasks/main.yml
+++ b/roles/www/tasks/main.yml
@@ -1,10 +1,26 @@
 ---
 - include: apache.yml
 
-- stat: path="{{semaphores_dir}}/{{lept_sem}}"
-  register: lept_installed
+#- stat: path="{{semaphores_dir}}/{{lept_sem}}"
+#  register: lept_installed
 
-- include: leptonica.yml
-  when: lept_installed.stat.exists == False
+#- include: leptonica.yml
+#  when: lept_installed.stat.exists == False
+
+- stat: path="{{semaphores_dir}}/{{tess_sem}}"
+  register: tess_installed
 
 - include: tesseract.yml
+  when: tess_installed.stat.exists == False
+
+- include: devtools.yml
+
+- include: fits.yml
+
+- stat: path="{{semaphores_dir}}/{{ffmpeg_sem}}"
+  register: ffmpeg_installed
+
+- include: ffmpeg.yml
+  when: ffmpeg_installed.stat.exists == False
+
+
