--- a/roles/www/vars/main.yml
+++ b/roles/www/vars/main.yml
@@ -1,14 +1,14 @@
 ---
 
-tess_ver: 3.02.02
-tess_dir: "{{work_dir}}/tesseract-{{tess_ver}}-{{tess_ver}}"
-tess_url: 
-tess_sha:
+ffmpeg_version: 1.1.4
 
-lept_ver: 1.71
-lept_dir: "{{work_dir}}/leptonica-{{lept_ver}}"
-lept_tar: "leptonica-{{lept_ver}}.tar.gz"
-lept_src: http://www.leptonica.org/source 
-lept_url: "{{lept_src}}/{{lept_tar}}"
-lept_sha: cc5d736e81496eb25e195f380f553537e0410c3f7151a778b2a546e35c7eb848
-lept_sem: leptonica.j2
+fits_home: "/usr/local/fits"
+fits_version: 0.8.5
+
+solr_home: "/usr/local/solr"
+solr_version: 4.2.0
+
+drupal_home: "/var/www/drupal"
+
+tess_sem: "tesseract.j2"
+ffmpeg_sem: "ffmpeg.j2"
