Adds config for gsearch and solr; modularizes java installation.

--- a/roles/java/tasks/bootstrap.yml
+++ b/roles/java/tasks/bootstrap.yml
@@ -5,22 +5,7 @@
 
 - apt: name=python-software-properties
 
-- apt_repository: repo=ppa:webupd8team/java
-
-- shell: echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections
-
-- shell: echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections
-
-- apt: name=oracle-java8-installer
-
-- shell: update-java-alternatives -s java-8-oracle
-
-- apt: name=oracle-java8-set-default
-
-- shell: readlink -f /usr/bin/java
-  register: java_home
-
-- lineinfile: dest=/etc/environment line="JAVA_HOME={{java_home.stdout}}"
+- include: java8.yml
 
 - apt: name=maven
 
@@ -46,4 +31,4 @@
 - name: hack /etc/init.d/tomcat7 for java 8 compatibility
   replace: replace='JDK_DIRS="/usr/lib/jvm/default-java ${OPENJDKS} /usr/lib/jvm/java-6-openjdk /usr/lib/jvm/java-6-sun /usr/lib/jvm/java-7-oracle /usr/lib/jvm/java-8-oracle"' dest="/etc/init.d/tomcat7" regexp="JDK_DIRS=.*"
   # http://stackoverflow.com/questions/27457398/why-java-home-not-recognized-by-tomcat7-in-ubuntu
-  # TODO
+  # TODO   
