--- a/roles/java/templates/install.properties
+++ b/roles/java/templates/install.properties
@@ -7,7 +7,7 @@ apia.auth.required=false
 database.jdbcDriverClass=com.mysql.jdbc.Driver
 upstream.auth.enabled=false
 ssl.available=false
-database.jdbcURL=jdbc\:mysql\://192.168.33.51/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
+database.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
 database.password=fedoraAdmin
 database.mysql.driver=included
@@ -24,7 +24,7 @@ fedora.serverContext=fedora
 llstore.type=akubra-fs
 tomcat.home=/var/lib/tomcat7
 fesl.authn.enabled=true
-database.mysql.jdbcURL=jdbc\:mysql\://192.168.33.51/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
+database.mysql.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
 fedora.home=/usr/local/fedora
 install.type=custom
 servlet.engine=included
