--- a/www.yml
+++ b/www.yml
@@ -5,11 +5,11 @@
     - vars/www.yml
     - vars/main.yml
   roles:
-#    - common
-#    - geerlingguy.git
-#    - apache
-#    - geerlingguy.php
-#    - geerlingguy.composer
+    - common
+    - geerlingguy.git
+    - apache
+    - geerlingguy.php
+    - geerlingguy.composer
     - drush
     - drupal
     - islandora
