--- a/roles/islandora/tasks/deps.yml
+++ b/roles/islandora/tasks/deps.yml
@@ -4,4 +4,4 @@
     name: "{{item}}"
   with_items:
     - imagemagick
-    - openjdk-7-jre
+#    - openjdk-7-jre # needed on the webserver for islandora_batch ?
