--- a/roles/islandora/tasks/main.yml
+++ b/roles/islandora/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
 - include: deps.yml
-#- include: devtools.yml
-#- include: tesseract.yml
-#- include: ffmpeg.yml
+- include: devtools.yml
+- include: tesseract.yml
+- include: ffmpeg.yml
 - include: fits.yml
 - include: mods.yml
 - include: libs.yml
