--- a/roles/islandora/tasks/deps.yml
+++ b/roles/islandora/tasks/deps.yml
@@ -5,3 +5,6 @@
   with_items:
     - imagemagick
 #    - openjdk-7-jre # needed on the webserver for islandora_batch ?
+    - lame
+    - poppler-utils
+    - bibutils
