--- a/roles/java/tasks/gsearch.yml
+++ b/roles/java/tasks/gsearch.yml
@@ -7,7 +7,7 @@
   register: solr_conf_present
 
 - name: Dependencies Clone basic-solr-config from DG
-  git: repo=https://github.com/discoverygarden/basic-solr-config.git dest="{{work_dir}}/basic-solr-config" version=4.x force=yes
+  git: repo=https://github.com/discoverygarden/basic-solr-config.git dest="{{work_dir}}/basic-solr-config" version=4.x 
   when: solr_conf_present.stat.exists == False
 
   # todo - when can we not do this ? use a file
@@ -21,7 +21,7 @@
   register: dgi_gsearch_extensions_present
 
 - name: Clone dgi_gsearch_extensions from DG github
-  git: repo=https://github.com/discoverygarden/dgi_gsearch_extensions.git dest="{{work_dir}}/dgi_gsearch_extensions" force=yes
+  git: repo=https://github.com/discoverygarden/dgi_gsearch_extensions.git dest="{{work_dir}}/dgi_gsearch_extensions" 
   when: dgi_gsearch_extensions_present.stat.exists == False
 
 - name: "Check if we've already built the gsearch extension jars"
@@ -62,23 +62,24 @@
 
   # TODO create a $TOMCAT_HOME
 - name: Deploy GSearch to Tomcat
-  file: path=/var/lib/tomcat7/webapps/fedoragsearch.war state=link src="{{work_dir}}/gsearch/FgsBuild/fromsource/fedoragsearch.war"
-#  when: gsearch_war_present.stat.exists == False
+  command: "cp {{work_dir}}/gsearch/FgsBuild/fromsource/fedoragsearch.war /var/lib/tomcat7/webapps/"
+#  file: path=/var/lib/tomcat7/webapps/fedoragsearch.war state=link src="{{work_dir}}/gsearch/FgsBuild/fromsource/fedoragsearch.war"
+  when: gsearch_war_present.stat.exists == False
 
 - name: Set some flags for the jvm
   shell: sed -i 's#JAVA_OPTS="-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC"#JAVA_OPTS="-Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -Dkakadu.home=/usr/local/djatoka/bin/Linux-x86-64 -Djava.library.path=/usr/local/djatoka/lib/Linux-x86-64 -DLD_LIBRARY_PATH=/usr/local/djatoka/lib/Linux-x86-64"#g' /etc/default/tomcat7
 
-- name: restart tomcat, sleep 90 # changed to 90 from 75 in order to ensure that deployment happens
-  service: name=tomcat7 sleep=90 state=restarted
-  when: gsearch_war_present.stat.exists == False
+- name: restart tomcat, sleep 60
+  service: name=tomcat7 sleep=60 state=restarted
 
 - name: restart tomcat AGAIN
   service:
     name: tomcat7
     state: restarted
+    sleep: 60
 
 - name: GSearch configurations
-  unarchive: copy=no src=http://alpha.library.yorku.ca/fgsconfigFinal.zip dest=/var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/classes/
+  unarchive: copy=no src=http://alpha.library.yorku.ca/fgsconfigFinal.zip dest=/var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/classes
 
 #- name: "Check if we've already deployed the dgi gsearch extension jar"
 #  stat: path=/var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/lib/gsearch_extensions-0.1.1-jar-with-dependencies.jar
