--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 ---
-- include: local.yml
-- include: db.yml
-- include: java.yml
+#- include: local.yml
+#- include: db.yml
+#- include: java.yml
 - include: www.yml
