working minus the windows script- stay tuned for the next commit

--- a/roles/islandora/tasks/libs.yml
+++ b/roles/islandora/tasks/libs.yml
@@ -137,6 +137,7 @@
     - islandora_simple_workflow
     - islandora_xacml_api
     - islandora_xacml_editor
+    - xmlsitemap
     - islandora_xmlsitemap
     - colorbox
     - islandora_internet_archive_bookreader
