start tomcat after installation

--- a/roles/java/tasks/bootstrap.yml
+++ b/roles/java/tasks/bootstrap.yml
@@ -32,3 +32,9 @@
   replace: replace='JDK_DIRS="/usr/lib/jvm/default-java ${OPENJDKS} /usr/lib/jvm/java-6-openjdk /usr/lib/jvm/java-6-sun /usr/lib/jvm/java-7-oracle /usr/lib/jvm/java-8-oracle"' dest="/etc/init.d/tomcat7" regexp="JDK_DIRS=.*"
   # http://stackoverflow.com/questions/27457398/why-java-home-not-recognized-by-tomcat7-in-ubuntu
   # TODO   
+  
+- name: start tomcat for the first time
+  service:
+    name: tomcat7
+    state: started
+    sleep: 60
