--- a/roles/islandora/tasks/libs.yml
+++ b/roles/islandora/tasks/libs.yml
@@ -73,6 +73,14 @@
 #- name: Ensure that the islandora_fedora_host var is set correctly before enabling...
 #  script: "../files/islandora_base_url.sh {{drupal_core_path}}"
 
+- name: Fetch islandora dependency modules
+  shell: drush -r {{ drupal_core_path }} dl {{ item }} && drush -y en {{ item }}
+  with_items:
+    - rules
+    - date
+    - datepicker
+    
+
 - name: enable islandora
   shell: "drush -y -u 1 en islandora"
   args:
