--- a/roles/java/tasks/gsearch.yml
+++ b/roles/java/tasks/gsearch.yml
@@ -69,10 +69,10 @@
 - name: Set some flags for the jvm
   shell: sed -i 's#JAVA_OPTS="-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC"#JAVA_OPTS="-Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -Dkakadu.home=/usr/local/djatoka/bin/Linux-x86-64 -Djava.library.path=/usr/local/djatoka/lib/Linux-x86-64 -DLD_LIBRARY_PATH=/usr/local/djatoka/lib/Linux-x86-64"#g' /etc/default/tomcat7
 
-- name: restart tomcat, sleep 60
+- name: restart tomcat, sleep for 3 minutes...........
   service:
     name: tomcat7
-    sleep: 180
+    sleep: 60
     state: restarted
 
 - name: GSearch configurations
