--- a/roles/java/tasks/fcrepo.yml
+++ b/roles/java/tasks/fcrepo.yml
@@ -7,7 +7,7 @@
   file: state=directory path="{{fedora_home}}" owner=tomcat7 group=tomcat7 mode=0755
 
 - name: Download Fedora from github releases
-  copy: src="files/fcrepo-installer-{{fedora_version}}.jar" dest="{{work_dir}}"
+  copy: src="/opt/fcrepo-installer-{{fedora_version}}.jar" dest="{{work_dir}}" remote_src=yes
 
 #- name: Download Fedora from local cache
 #  copy: src="../files/fcrepo-installer-{{fedora_version}}.jar" dest="{{work_dir#}}"
@@ -79,7 +79,7 @@
 #  template: src=../templates/deny-apim-if-not-localhost.xml dest="{{fedora_home}}/data/fedora-xacml-policies/repository-policies/default/"
 
 - name: get Drupal auth filter from github
-  get_url: url="https://github.com/islandora/islandora_drupal_filter/releases/download/v7.1.3/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" dest="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar"
+  get_url: url="https://github.com/islandora/islandora_drupal_filter/releases/download/v7.1.3/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" dest="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
 
 - name: set drupal auth permissions
   file: path="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
