--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-#- include: bootstrap.yml
-#- include: djatoka.yml
-#- include: fcrepo.yml
+- include: bootstrap.yml
+- include: djatoka.yml
+- include: fcrepo.yml
 - include: solr.yml
 - include: gsearch.yml
