--- a/roles/islandora/tasks/libs.yml
+++ b/roles/islandora/tasks/libs.yml
@@ -73,8 +73,10 @@
 #- name: Ensure that the islandora_fedora_host var is set correctly before enabling...
 #  script: "../files/islandora_base_url.sh {{drupal_core_path}}"
 
-- name: Fetch islandora dependency modules
-  shell: drush -r {{ drupal_core_path }} dl {{ item }} && drush -r {{ drupal_core_path }} -y en {{ item }}
+- name: Fetch and enable islandora dependency modules
+  shell: "drush dl {{ item }} && drush -y en {{ item }}"
+  args:
+    chdir: "{{ drupal_core_path }}"
   with_items:
     - entity
     - rules
