--- a/vars/www.yml
+++ b/vars/www.yml
@@ -2,7 +2,7 @@
 
 # Settings for building a Drupal site from a makefile (if 'build_from_makefile'
 # is 'true').
-drupal_major_version: 7
+drupal_major_version: 7.x
 drupal_core_path: "/var/www/drupal"
 drupal_domain: "drupalvm.dev"
 drupal_site_name: "Drupal"
